src/test/ui/error-codes/E0502.stderr
error[E0502]: cannot borrow `*a` as mutable because it is also borrowed as immutable
  --> $DIR/E0502.rs:4:5
   |
LL |     let ref y = a;
   |         ----- immutable borrow occurs here
LL |     bar(a);
   |     ^^^^^^ mutable borrow occurs here
LL |     y.use_ref();
   |     - immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
